--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,31 @@ show_column_numbers = true
 show_error_codes = true
 show_error_context = true
 
+[tool.ruff]
+ignore = ["E501"]
+line-length = 80
+select = [
+    "B",
+    "B9",
+    "C",
+    "D",
+    "E",
+    "F",
+    "N",
+    "S",
+    "W",
+]
+
+[tool.ruff.mccabe]
+max-complexity = 10
+
+[tool.ruff.pydocstyle]
+convention = "google"
+
+[tool.ruff.per-file-ignores]
+"tests/*" = ["S101"]
+
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
